--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,6 +14,12 @@
         <item>完结</item>
     </string-array>
 
+    <string-array name="tab_name3">
+        <item>周榜</item>
+        <item>月榜</item>
+        <item>总榜</item>
+    </string-array>
+
     <string-array name="sort_man">
         <item>玄幻</item>
         <item>奇幻</item>
