--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Activity.DetailsActivity">
+    tools:context=".ui.activity.DetailsActivity">
     <include
         android:id="@+id/toolbar_details"
         layout="@layout/toolbar_main"/>
