--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Activity.SearchActivity"
+    tools:context=".ui.activity.SearchActivity"
     android:background="#F9F9F9">
     <RelativeLayout
         android:id="@+id/lay_top"
