--- a/app/src/main/res/layout/activity_sort.xml
+++ b/app/src/main/res/layout/activity_sort.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Activity.SortActivity"
+    tools:context=".ui.activity.SortActivity"
     android:background="#F9F9F9">
     <include
         android:id="@+id/toolbar_sort"
