--- a/app/src/main/res/layout/activity_sort_books.xml
+++ b/app/src/main/res/layout/activity_sort_books.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Activity.SortBooksActivity"
+    tools:context=".ui.activity.SortBooksActivity"
     android:background="#F9F9F9">
     <include
         android:id="@+id/toolbar_sort_books"
